# mybot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/newsnow-hot-summary/: SKILL.md
.claude/skills/newsnow-json-analyze/: SKILL.md
.claude/skills/newsnow-latest-summary/: SKILL.md
.claude/skills/newsnow-merge-summary/: SKILL.md
.claude/skills/scripts/: merge_snapshot_json.py
.github/workflows/: docker-tag-build.yml
.weixin_py/: session.json
busi/: __init__.py
busi/claude_agent/: __init__.py  hot_news_push.py  weixin_adapter.py
lib/: newsnow_client.py  task_scheduler.py
lib/claude/: __init__.py  agent.py  sessions.py
lib/tasks/: __init__.py  get_hot_news.py  get_latest_news.py
lib/weixin_bot/: __init__.py  client.py  daemon.py  qr.py
skills/newsnow/: readme.md
weixin_bot/: daemon.py  models.py  storage.py
